--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,10 @@
 {
   "name": "thinmint-server",
   "dependencies": {
-    "angular-elastic-input": "~2.2.0"
+    "angular-elastic-input": "~2.2.0",
+    "Chart.js": "~1.0.2",
+    "angular": "1.5.0",
+    "underscore": "~1.8.3",
+    "bootstrap": "~3.3.6"
   }
 }
