--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "Chart.js": "~1.0.2",
     "angular": "1.5.0",
     "underscore": "~1.8.3",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "angular-material": "~1.0.5"
   }
 }
