--- a/package.json
+++ b/package.json
@@ -2,10 +2,28 @@
   "name": "thinmint-server",
   "version": "0.1.0",
   "author": "rob4lderman",
+  "main": "server.js",
   "dependencies": {
     "express": "~4.13.4",
     "body-parser": "~1.14.2",
     "mongodb": "~2.1.4",
-    "monk": "~1.0.1"
+    "monk": "~1.0.1",
+    "underscore": "~1.8.3"
   }
+ "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "0.12.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/thinmint-server"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
