--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "body-parser": "~1.14.2",
     "mongodb": "~2.1.4",
     "monk": "~1.0.1",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "passport": "~0.3.2",
+    "passport-http": "~0.3.0"
   },
- "scripts": {
+  "scripts": {
     "start": "node server.js"
   },
   "engines": {
